--- a/parse_PRL_sheet.ipynb
+++ b/parse_PRL_sheet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "0421e621",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "4b424905",
    "metadata": {},
    "outputs": [],
@@ -23,11 +23,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d9d38075",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3                 NaN\n",
+      "4      LST_FSLcluster\n",
+      "12                NaN\n",
+      "14     LST_FSLcluster\n",
+      "16                NaN\n",
+      "            ...      \n",
+      "238               NaN\n",
+      "240               NaN\n",
+      "242               NaN\n",
+      "249               NaN\n",
+      "255               NaN\n",
+      "Name: algorithm, Length: 90, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(check['algorithm'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f8578909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ms1225\n",
+      "ms1356\n",
+      "ms2113\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _,row in check.iterrows():\n",
+    "    if isinstance(row['algorithm'], str) and \"SAMSEG\" in row['algorithm']:\n",
+    "        print(row['ID'])"
+   ]
   }
  ],
  "metadata": {
@@ -46,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
