--- a/training/test_train1/train_swinunet.ipynb
+++ b/training/test_train1/train_swinunet.ipynb
@@ -55,19 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "498dfa2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataroot = Path(\"/media/smbshare/3Tpioneer_bids\")\n",
     "training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
-    "work_dir = training_work_home / \"test_train0_swinunet\" #! edit this\n",
+    "work_dir = training_work_home / \"test_train1_swinunet\" #! edit this\n",
     "datalist_file_src = os.path.join(os.getcwd(), \"datalist.json\")\n",
     "datalist_file = work_dir / \"datalist.json\"\n",
     "\n",
     "description = \"\"\"Model: SwinUNETR\n",
-    "Trained using flair.phase.t1 images. \n",
+    "Trained using flair.phase images. \n",
     "Labels created by combining definite and probably PRLs and adding those to the original LST lesion segmentations\"\"\""
    ]
   },
