--- a/training/test_train1/train_segresnet.ipynb
+++ b/training/test_train1/train_segresnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4aefd016",
    "metadata": {},
    "outputs": [
@@ -55,41 +55,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "498dfa2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataroot = Path(\"/media/smbshare/3Tpioneer_bids\")\n",
     "training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
-    "work_dir = training_work_home / \"test_train0_swinunet\" #! edit this\n",
+    "work_dir = training_work_home / \"test_train1_segresnet\" #! edit this\n",
     "datalist_file_src = os.path.join(os.getcwd(), \"datalist.json\")\n",
     "datalist_file = work_dir / \"datalist.json\"\n",
+    "algos = [\"segresnet\"]\n",
     "\n",
-    "description = \"\"\"Model: SwinUNETR\n",
-    "Trained using flair.phase.t1 images. \n",
+    "description = \"\"\"Model: SegResNet\n",
+    "Trained using flair.phase images. \n",
     "Labels created by combining definite and probably PRLs and adding those to the original LST lesion segmentations\"\"\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92f26a15",
+   "metadata": {},
+   "source": [
+    "Check that every file in the datalist exists"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "988d591c",
+   "execution_count": 3,
+   "id": "9618607a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
+    "with open(datalist_file_src, 'r') as f:\n",
+    "    datalist = json.load(f)\n",
+    "\n",
+    "for item in datalist['training']:\n",
+    "    assert os.path.exists(item['image'])\n",
+    "    assert os.path.exists(item['label'])\n",
+    "\n",
+    "for item in datalist['testing']:\n",
+    "    assert os.path.exists(item['image'])\n",
+    "    assert os.path.exists(item['label'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c27d6f0",
+   "metadata": {},
+   "source": [
+    "Create the work_dir, copy over the datalist, and save an info file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "988d591c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating /home/srs-9/Projects/prl_project/training_work_dirs/test_train1_segresnet\n",
+      "work_dir is:  /home/srs-9/Projects/prl_project/training_work_dirs/test_train1_segresnet\n"
+     ]
+    }
+   ],
+   "source": [
     "if not work_dir.exists():\n",
+    "    print(f\"Creating {str(work_dir)}\")\n",
     "    os.makedirs(work_dir)\n",
     "\n",
     "shutil.copyfile(datalist_file_src, datalist_file)\n",
     "\n",
     "with open(work_dir / \"info.txt\", 'w') as f:\n",
-    "    f.write(description)"
+    "    f.write(description)\n",
+    "\n",
+    "print(\"work_dir is: \", work_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "87b7a902",
    "metadata": {},
    "outputs": [
@@ -97,17 +147,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-28 17:30:53,806 - INFO - AutoRunner using work directory /home/srs-9/Projects/prl_project/training_work_dirs/test_train0_swinunet\n",
-      "2025-05-28 17:30:53,807 - INFO - Found num_fold 5 based on the input datalist /home/srs-9/Projects/prl_project/training_work_dirs/test_train0_swinunet/datalist.json.\n",
-      "2025-05-28 17:30:53,807 - INFO - Setting num_fold 5 based on the input datalist /home/srs-9/Projects/prl_project/training_work_dirs/test_train0_swinunet/datalist.json.\n",
-      "2025-05-28 17:30:53,819 - INFO - Using user defined command running prefix , will override other settings\n"
+      "2025-05-29 12:44:35,148 - INFO - AutoRunner using work directory /home/srs-9/Projects/prl_project/training_work_dirs/test_train1_swinunet\n",
+      "2025-05-29 12:44:35,150 - INFO - Found num_fold 5 based on the input datalist /home/srs-9/Projects/prl_project/training_work_dirs/test_train1_swinunet/datalist.json.\n",
+      "2025-05-29 12:44:35,150 - INFO - Setting num_fold 5 based on the input datalist /home/srs-9/Projects/prl_project/training_work_dirs/test_train1_swinunet/datalist.json.\n",
+      "2025-05-29 12:44:35,164 - INFO - Using user defined command running prefix , will override other settings\n"
      ]
     }
    ],
    "source": [
     "runner = AutoRunner(\n",
     "    work_dir=work_dir,\n",
-    "    algos=[\"swinunetr\"],\n",
+    "    algos=algos,\n",
     "    input={\n",
     "        \"modality\": \"MRI\",\n",
     "        \"datalist\": str(datalist_file),\n",
@@ -118,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "de9ea368",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<monai.apps.auto3dseg.auto_runner.AutoRunner at 0x7d18cea282f0>"
+       "<monai.apps.auto3dseg.auto_runner.AutoRunner at 0x72cccfe13500>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
