train swin and segresnet

--- a/training/test_train0/get_dice.ipynb
+++ b/training/test_train0/get_dice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "16520926",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,9 @@
     "import json\n",
     "import re\n",
     "import statistics\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pyperclip\n",
+    "import subprocess"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "849a8d20",
    "metadata": {},
    "outputs": [],
@@ -44,15 +46,51 @@
     "\n",
     "inferences = []\n",
     "labels = []\n",
+    "subjects = []\n",
     "for item in datalist['testing']:\n",
     "    label = str(item['label'])\n",
     "    assert os.path.exists(label)\n",
     "    labels.append(label)\n",
     "    subject = re.search(r\"(sub-ms\\d{4})\", label)[1]\n",
+    "    subjects.append(subject)\n",
     "    session = re.search(r\"(ses-\\d{8})\", label)[1]\n",
     "    inf = ensemble_dir / subject / session / \"flair.phase.t1_ensemble.nii.gz\"\n",
     "    assert inf.exists()\n",
     "    inferences.append(str(inf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "03798410",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-ms1183\n",
+      "sub-ms1281\n",
+      "sub-ms2115\n",
+      "sub-ms1136\n",
+      "sub-ms1523\n",
+      "sub-ms1274\n",
+      "sub-ms2131\n",
+      "sub-ms1152\n",
+      "sub-ms2207\n",
+      "sub-ms1124\n",
+      "sub-ms1044\n",
+      "sub-ms1316\n",
+      "sub-ms1033\n",
+      "sub-ms1131\n",
+      "sub-ms2060\n",
+      "sub-ms1156\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sub in subjects:\n",
+    "    print(sub)"
    ]
   },
   {
@@ -124,6 +162,63 @@
     "    lab_data = nib.load(lab).get_fdata()\n",
     "    inf_data = nib.load(inf).get_fdata()\n",
     "    performance.append(analyze_performance(lab_data, inf_data, val=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "622ce17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "itksnap -g /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/flair.nii.gz -o /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/phase.nii.gz /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/t1.nii.gz -s /home/srs-9/Projects/prl_project/training_work_dirs/test_train0_swinunet/ensemble_output/sub-ms1274/ses-20180504/flair.phase.t1_ensemble.nii.gz /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/lesion.t3m20/lesion_and_prl_labels_tmp.nii.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Popen: returncode: None args: ['itksnap', '-g', '/media/smbshare/3Tpioneer_...>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching ITK-SNAP\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Return code : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "subject = 1183\n",
+    "ind = subjects.index(f\"sub-ms{subject}\")\n",
+    "ind = 5\n",
+    "ground_truth = labels[ind]\n",
+    "inf = inferences[ind]\n",
+    "image_dir = Path(ground_truth).parent.parent\n",
+    "\n",
+    "images = [\"flair.nii.gz\", \"phase.nii.gz\", \"t1.nii.gz\"]\n",
+    "image_paths = [image_dir / im for im in images]\n",
+    "\n",
+    "label_paths = [inf, ground_truth]\n",
+    "\n",
+    "cmd = utils.open_itksnap_workspace_cmd(image_paths, label_paths, win=False)\n",
+    "print(cmd)\n",
+    "pyperclip.copy(cmd)\n",
+    "subprocess.Popen(cmd.split(\" \"))"
    ]
   },
   {
