test_train dice

--- a/training/test_train0/get_dice.ipynb
+++ b/training/test_train0/get_dice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "16520926",
    "metadata": {},
    "outputs": [],
@@ -16,27 +16,37 @@
     "import statistics\n",
     "import numpy as np\n",
     "import pyperclip\n",
-    "import subprocess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a209f40b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataroot = Path(\"/media/smbshare/3Tpioneer_bids\")\n",
-    "training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
-    "work_dir = training_work_home / \"test_train0_swinunet\" #! edit this\n",
-    "ensemble_dir = work_dir / \"ensemble_output\"\n",
-    "datalist_file_src = os.path.join(os.getcwd(), \"datalist.json\")\n",
-    "datalist_file = work_dir / \"datalist.json\""
+    "import subprocess\n",
+    "from mri_data import file_manager as fm\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "a209f40b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drive_root = fm.get_drive_root()\n",
+    "dataroot = drive_root / \"3Tpioneer_bids\"\n",
+    "# training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
+    "training_work_home = drive_root / \"srs-9/prl_project/training_work_dirs\"\n",
+    "work_dir = training_work_home / \"test_train0_swinunet\" #! edit this\n",
+    "ensemble_dir = work_dir / \"ensemble_output\"\n",
+    "datalist_file = work_dir / \"datalist.json\"\n",
+    "\n",
+    "prl_info = pd.read_csv(\"/home/srs-9/Projects/prl_project/data/PRL_labels.csv\")\n",
+    "\n",
+    "def subid_from_subject(subject):\n",
+    "    return int(re.search(r\"(\\d{4})\", subject)[1])\n",
+    "prl_info['subid'] = prl_info['ID'].map(subid_from_subject)\n",
+    "prl_info.set_index(\"subid\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "849a8d20",
    "metadata": {},
    "outputs": [],
@@ -48,7 +58,7 @@
     "labels = []\n",
     "subjects = []\n",
     "for item in datalist['testing']:\n",
-    "    label = str(item['label'])\n",
+    "    label = str(drive_root / Path(item['label']).relative_to(\"/media/smbshare\"))\n",
     "    assert os.path.exists(label)\n",
     "    labels.append(label)\n",
     "    subject = re.search(r\"(sub-ms\\d{4})\", label)[1]\n",
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "4333105e",
    "metadata": {},
    "outputs": [],
@@ -143,7 +153,7 @@
     "    FN = np.sum((lab == val) & (inf != val))\n",
     "\n",
     "    sens = TP / (TP + FN)\n",
-    "    spec = FN / (TN + FP)\n",
+    "    spec = TN / (TN + FP)\n",
     "    ppv = TP / (TP + FP)\n",
     "    npv = TN / (TN + FN)\n",
     "\n",
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "b1728f09",
    "metadata": {},
    "outputs": [],
@@ -166,7 +176,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
+   "id": "7bb319e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sens': 0.17158531971244798,\n",
+       " 'spec': 0.9999887472462011,\n",
+       " 'ppv': 0.788695652173913,\n",
+       " 'npv': 0.9997972577243696}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "performance[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64cf798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_performance1(lab, inf, val=1):\n",
+    "    TP = np.sum((lab == val) & (inf == val))\n",
+    "    FP = np.sum((lab != val) & (inf == val))\n",
+    "    TN = np.sum((lab != val) & (inf != val))\n",
+    "    FN = np.sum((lab == val) & (inf != val))\n",
+    "    return TP, FP, TN, FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc4a97d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP_total = 0\n",
+    "FP_total = 0\n",
+    "TN_total = 0\n",
+    "FN_total = 0\n",
+    "for lab, inf in zip(labels, inferences):\n",
+    "    lab_data = nib.load(lab).get_fdata()\n",
+    "    inf_data = nib.load(inf).get_fdata()\n",
+    "    TP, FP, TN, FN = get_performance1(lab_data, inf_data, val=2)\n",
+    "    TP_total += TP\n",
+    "    FP_total += FP\n",
+    "    TN_total += TN\n",
+    "    FN_total += FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "54945d5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sensitivity: 0.4661\n",
+      "Specificity: 1.0000\n",
+      "PPV:         0.5428\n",
+      "NPV:         1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "sens = TP_total / (TP_total + FN_total)\n",
+    "spec = TN_total / (TN_total + FP_total)\n",
+    "ppv = TP_total / (TP_total + FP_total)\n",
+    "npv = TN_total / (TN_total + FN_total)\n",
+    "\n",
+    "print(\"Sensitivity: {:0.4f}\".format(sens))\n",
+    "print(\"Specificity: {:0.4f}\".format(spec))\n",
+    "print(\"PPV:         {:0.4f}\".format(ppv))\n",
+    "print(\"NPV:         {:0.4f}\".format(npv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0a5b202c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_performance2(lab, inf):\n",
+    "    TP = np.sum((lab == 2) & (inf == 2))\n",
+    "    FP = np.sum((lab == 1) & (inf == 2))\n",
+    "    TN = np.sum((lab == 1) & (inf == 1))\n",
+    "    FN = np.sum((lab == 2) & (inf == 1))\n",
+    "    return TP, FP, TN, FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ffac5688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP_total = 0\n",
+    "FP_total = 0\n",
+    "TN_total = 0\n",
+    "FN_total = 0\n",
+    "for lab, inf in zip(labels, inferences):\n",
+    "    lab_data = nib.load(lab).get_fdata()\n",
+    "    inf_data = nib.load(inf).get_fdata()\n",
+    "    TP, FP, TN, FN = get_performance2(lab_data, inf_data)\n",
+    "    TP_total += TP\n",
+    "    FP_total += FP\n",
+    "    TN_total += TN\n",
+    "    FN_total += FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ba618bec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sensitivity: 0.4962\n",
+      "Specificity: 0.9558\n",
+      "PPV:         0.5802\n",
+      "NPV:         0.9391\n"
+     ]
+    }
+   ],
+   "source": [
+    "sens = TP_total / (TP_total + FN_total)\n",
+    "spec = TN_total / (TN_total + FP_total)\n",
+    "ppv = TP_total / (TP_total + FP_total)\n",
+    "npv = TN_total / (TN_total + FN_total)\n",
+    "\n",
+    "print(\"Sensitivity: {:0.4f}\".format(sens))\n",
+    "print(\"Specificity: {:0.4f}\".format(spec))\n",
+    "print(\"PPV:         {:0.4f}\".format(ppv))\n",
+    "print(\"NPV:         {:0.4f}\".format(npv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "622ce17c",
    "metadata": {},
    "outputs": [
@@ -174,38 +338,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "itksnap -g /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/flair.nii.gz -o /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/phase.nii.gz /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/t1.nii.gz -s /home/srs-9/Projects/prl_project/training_work_dirs/test_train0_swinunet/ensemble_output/sub-ms1274/ses-20180504/flair.phase.t1_ensemble.nii.gz /media/smbshare/3Tpioneer_bids/sub-ms1274/ses-20180504/lesion.t3m20/lesion_and_prl_labels_tmp.nii.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Popen: returncode: None args: ['itksnap', '-g', '/media/smbshare/3Tpioneer_...>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching ITK-SNAP\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Return code : 0\n"
+      "7\n",
+      "itksnap -g H:/3Tpioneer_bids/sub-ms1281/ses-20180705/flair.nii.gz -o H:/3Tpioneer_bids/sub-ms1281/ses-20180705/phase.nii.gz H:/3Tpioneer_bids/sub-ms1281/ses-20180705/t1.nii.gz -s H:/srs-9/prl_project/training_work_dirs/test_train0_swinunet/ensemble_output/sub-ms1281/ses-20180705/flair.phase.t1_ensemble.nii.gz H:/3Tpioneer_bids/sub-ms1281/ses-20180705/lesion.t3m20/lesion_and_prl_labels_tmp.nii.gz\n"
      ]
     }
    ],
    "source": [
-    "subject = 1183\n",
-    "ind = subjects.index(f\"sub-ms{subject}\")\n",
-    "ind = 5\n",
+    "subid = 1281\n",
+    "print(prl_info.loc[subid, \"Total PRL\"])\n",
+    "\n",
+    "ind = subjects.index(f\"sub-ms{subid}\")\n",
+    "# ind = 5\n",
     "ground_truth = labels[ind]\n",
     "inf = inferences[ind]\n",
     "image_dir = Path(ground_truth).parent.parent\n",
@@ -215,10 +358,10 @@
     "\n",
     "label_paths = [inf, ground_truth]\n",
     "\n",
-    "cmd = utils.open_itksnap_workspace_cmd(image_paths, label_paths, win=False)\n",
+    "cmd = utils.open_itksnap_workspace_cmd(image_paths, label_paths, win=True)\n",
     "print(cmd)\n",
     "pyperclip.copy(cmd)\n",
-    "subprocess.Popen(cmd.split(\" \"))"
+    "# subprocess.Popen(cmd.split(\" \"))"
    ]
   },
   {
@@ -319,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
