--- a/training/check_train_data.ipynb
+++ b/training/check_train_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "c7b44814",
    "metadata": {},
    "outputs": [],
@@ -17,18 +17,22 @@
     "import numpy as np\n",
     "import pyperclip\n",
     "import subprocess\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from mri_data import file_manager as fm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "5774ad3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataroot = Path(\"/media/smbshare/3Tpioneer_bids\")\n",
-    "training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
+    "drive_root = fm.get_drive_root()\n",
+    "dataroot = drive_root / \"3Tpioneer_bids\"\n",
+    "# training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
+    "training_work_home = drive_root / \"srs-9/prl_project/training_work_dirs\"\n",
     "work_dir = training_work_home / \"test_train0_swinunet\" #! edit this\n",
     "ensemble_dir = work_dir / \"ensemble_output\"\n",
     "datalist_file_src = \"/home/srs-9/Projects/prl_project/training/test_train0/datalist.json\"\n",
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "b96032b5",
    "metadata": {},
    "outputs": [],
@@ -54,7 +58,7 @@
     "\n",
     "subject_paths = {}\n",
     "for item in datalist['training']:\n",
-    "    label = str(item['label'])\n",
+    "    label = str(drive_root / Path(item['label']).relative_to(\"/media/smbshare\"))\n",
     "    assert os.path.exists(label)\n",
     "    subject = re.search(r\"(sub-ms\\d{4})\", label)[1]\n",
     "    subid = re.search(r\"(\\d{4})\", subject)[1]\n",
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "0dedb3ba",
    "metadata": {},
    "outputs": [
@@ -74,115 +78,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "itksnap -g /media/smbshare/3Tpioneer_bids/sub-ms1186/ses-20170517/flair.nii.gz -o /media/smbshare/3Tpioneer_bids/sub-ms1186/ses-20170517/phase.nii.gz /media/smbshare/3Tpioneer_bids/sub-ms1186/ses-20170517/t1.nii.gz -s /media/smbshare/3Tpioneer_bids/sub-ms1186/ses-20170517/lesion.t3m20/lesion_and_prl_labels_tmp.nii.gz\n",
-      "TOTAL PRL: 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Popen: returncode: None args: ['itksnap', '-g', '/media/smbshare/3Tpioneer_...>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching ITK-SNAP\n"
+      "itksnap -g H:/3Tpioneer_bids/sub-ms1010/ses-20180208/flair.nii.gz -o H:/3Tpioneer_bids/sub-ms1010/ses-20180208/phase.nii.gz H:/3Tpioneer_bids/sub-ms1010/ses-20180208/t1.nii.gz -s H:/3Tpioneer_bids/sub-ms1010/ses-20180208/lesion.t3m20/lesion_and_prl_labels_tmp.nii.gz\n",
+      "TOTAL PRL: 3\n"
      ]
     }
    ],
    "source": [
-    "subid = 1186\n",
+    "subid = 1010\n",
     "image_dir = subject_paths[str(subid)]['image_dir']\n",
     "images = [\"flair.nii.gz\", \"phase.nii.gz\", \"t1.nii.gz\"]\n",
     "image_paths = [image_dir / im for im in images]\n",
     "\n",
     "label_paths = [subject_paths[str(subid)]['label']]\n",
     "\n",
-    "cmd = utils.open_itksnap_workspace_cmd(image_paths, label_paths, win=False)\n",
+    "cmd = utils.open_itksnap_workspace_cmd(image_paths, label_paths, win=True)\n",
     "print(cmd)\n",
     "print(\"TOTAL PRL:\", prl_info.loc[subid, 'Total PRL'])\n",
     "pyperclip.copy(cmd)\n",
-    "subprocess.Popen(cmd.split(\" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "ffce8c20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_dataroot = Path(\"/media/srs-9/Data/3Tpioneer_bids\")\n",
-    "with open(\"copy_cmds.sh\", 'w') as f:\n",
-    "    for item in datalist['training']:\n",
-    "        subject = re.search(r\"(sub-ms\\d{4})\", label)[1]\n",
-    "        session = re.search(r\"(ses-\\d{8})\", label)[1]\n",
-    "        base_dir = dataroot / subject / session\n",
-    "        lesion_dir = base_dir / \"lesion.t3m20\"\n",
-    "        assert lesion_dir.exists()\n",
-    "        target_dir = target_dataroot / subject / session / \"lesion.t3m20\"\n",
-    "        if not target_dir.exists():\n",
-    "            cmd = f\"cp -r {lesion_dir} {target_dir}\"\n",
-    "            f.write(cmd + \"\\n\")\n",
-    "\n",
-    "    # for item in datalist['testing']:\n",
-    "    #     subject = re.search(r\"(sub-ms\\d{4})\", label)[1]\n",
-    "    #     session = re.search(r\"(ses-\\d{8})\", label)[1]\n",
-    "    #     base_dir = dataroot / subject / session\n",
-    "    #     lesion_dir = base_dir / \"lesion.t3m20\"\n",
-    "    #     assert lesion_dir.exists()\n",
-    "    #     target_dir = target_dataroot / subject / session / \"lesion.t3m20\"\n",
-    "    #     if not target_dir.exists():\n",
-    "    #         cmd = f\"cp -r {lesion_dir} {target_dir}\"\n",
-    "    #         f.write(cmd + \"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "91160ee5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_dataroot = Path(\"/media/srs-9/Data/3Tpioneer_bids\")\n",
-    "with open(\"copy_cmds.sh\", 'w') as f:\n",
-    "    for _,row in prl_info.iterrows():\n",
-    "        subject = f\"sub-{row['ID']}\"\n",
-    "        session = f\"ses-{row['date_mri']}\"\n",
-    "        base_dir = dataroot / subject / session\n",
-    "        lesion_dir = base_dir / \"lesion.t3m20\"\n",
-    "        assert lesion_dir.exists()\n",
-    "        target_dir = target_dataroot / subject / session / \"lesion.t3m20\"\n",
-    "        if not target_dir.exists():\n",
-    "            cmd = f\"cp -r {lesion_dir} {target_dir}\"\n",
-    "            f.write(cmd + \"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "2f347cf6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/media/smbshare/3Tpioneer_bids/sub-ms1002/ses-5/21/2020/lesion.t3m20')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lesion_dir"
+    "# subprocess.Popen(cmd.split(\" \"))"
    ]
   }
  ],
@@ -202,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
