make it easy to open prediction

--- a/parse_PRL_sheet.ipynb
+++ b/parse_PRL_sheet.ipynb
@@ -2,23 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0421e621",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "4b424905",
    "metadata": {},
    "outputs": [],
    "source": [
     "prl_df = pd.read_csv(\"/home/srs-9/Projects/prl_project/data/PRL_labels.csv\")\n",
     "check = prl_df[(prl_df.mri_difference > 2) & (prl_df['Total PRL'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "488dc4c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, row in prl_df.iterrows():\n",
+    "    subid = re.search(r\"(\\d{4})\", row['ID'])[1]\n",
+    "    prl_df.loc[i, 'subid'] = subid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3766ab5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prl_df.set_index('subid', inplace=True)\n",
+    "prl_df.to_csv(\"/home/srs-9/Projects/prl_project/data/PRL_labels.csv\")"
    ]
   },
   {
