--- a/training/test_train0/get_dice.ipynb
+++ b/training/test_train0/get_dice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "16520926",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "a209f40b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
     "dataroot = drive_root / \"3Tpioneer_bids\"\n",
     "# training_work_home = Path(\"/home/srs-9/Projects/prl_project/training_work_dirs\")\n",
     "training_work_home = drive_root / \"srs-9/prl_project/training_work_dirs\"\n",
-    "work_dir = training_work_home / \"test_train0_swinunet\" #! edit this\n",
+    "work_dir = training_work_home / \"test_train0_segresnet\" #! edit this\n",
     "ensemble_dir = work_dir / \"ensemble_output\"\n",
     "datalist_file = work_dir / \"datalist.json\"\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "849a8d20",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
     "    subject = re.search(r\"(sub-ms\\d{4})\", label)[1]\n",
     "    subjects.append(subject)\n",
     "    session = re.search(r\"(ses-\\d{8})\", label)[1]\n",
-    "    inf = ensemble_dir / subject / session / \"flair.phase.t1_ensemble.nii.gz\"\n",
+    "    inf = ensemble_dir / subject / session / \"flair.phase.t1.nii.gz\"\n",
     "    assert inf.exists()\n",
     "    inferences.append(str(inf))"
    ]
@@ -72,40 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "03798410",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sub-ms1183\n",
-      "sub-ms1281\n",
-      "sub-ms2115\n",
-      "sub-ms1136\n",
-      "sub-ms1523\n",
-      "sub-ms1274\n",
-      "sub-ms2131\n",
-      "sub-ms1152\n",
-      "sub-ms2207\n",
-      "sub-ms1124\n",
-      "sub-ms1044\n",
-      "sub-ms1316\n",
-      "sub-ms1033\n",
-      "sub-ms1131\n",
-      "sub-ms2060\n",
-      "sub-ms1156\n"
-     ]
-    }
-   ],
-   "source": [
-    "for sub in subjects:\n",
-    "    print(sub)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "id": "f80e619a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "4577d303",
    "metadata": {},
    "outputs": [
@@ -129,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lesion dice: 0.82\n",
-      "PRL    dice: 0.47\n"
+      "lesion dice: 0.81\n",
+      "PRL    dice: 0.53\n"
      ]
     }
    ],
@@ -176,31 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7bb319e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sens': 0.17158531971244798,\n",
-       " 'spec': 0.9999887472462011,\n",
-       " 'ppv': 0.788695652173913,\n",
-       " 'npv': 0.9997972577243696}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "performance[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e64cf798",
    "metadata": {},
    "outputs": [],
@@ -215,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bcc4a97d",
    "metadata": {},
    "outputs": [],
@@ -236,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "54945d5a",
    "metadata": {},
    "outputs": [
@@ -244,9 +186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sensitivity: 0.4661\n",
+      "Sensitivity: 0.4806\n",
       "Specificity: 1.0000\n",
-      "PPV:         0.5428\n",
+      "PPV:         0.6159\n",
       "NPV:         1.0000\n"
      ]
     }
@@ -265,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "0a5b202c",
    "metadata": {},
    "outputs": [],
@@ -280,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ffac5688",
    "metadata": {},
    "outputs": [],
@@ -300,8 +242,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7fd675be",
+   "metadata": {},
+   "source": [
+    "When there is a PRL, it has a 50% chance of identifying it. When it's not a PRL, it will most likely identify it correctly. So it's better than chance overall"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "ba618bec",
    "metadata": {},
    "outputs": [
@@ -309,10 +259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sensitivity: 0.4962\n",
-      "Specificity: 0.9558\n",
-      "PPV:         0.5802\n",
-      "NPV:         0.9391\n"
+      "Sensitivity: 0.5253\n",
+      "Specificity: 0.9629\n",
+      "PPV:         0.6354\n",
+      "NPV:         0.9429\n"
      ]
     }
    ],
@@ -326,6 +276,27 @@
     "print(\"Specificity: {:0.4f}\".format(spec))\n",
     "print(\"PPV:         {:0.4f}\".format(ppv))\n",
     "print(\"NPV:         {:0.4f}\".format(npv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9b711a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5290"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FP_total"
    ]
   },
   {
