--- a/parse_PRL_sheet.ipynb
+++ b/parse_PRL_sheet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0421e621",
    "metadata": {},
    "outputs": [],
@@ -23,26 +23,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "488dc4c6",
+   "cell_type": "markdown",
+   "id": "42d408d0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for i, row in prl_df.iterrows():\n",
-    "    subid = re.search(r\"(\\d{4})\", row['ID'])[1]\n",
-    "    prl_df.loc[i, 'subid'] = subid"
+    "Run next cell only if need to recreate the csv and set a subid column again"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3766ab5f",
+   "execution_count": null,
+   "id": "488dc4c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prl_df.set_index('subid', inplace=True)\n",
-    "prl_df.to_csv(\"/home/srs-9/Projects/prl_project/data/PRL_labels.csv\")"
+    "# for i, row in prl_df.iterrows():\n",
+    "#     subid = re.search(r\"(\\d{4})\", row['ID'])[1]\n",
+    "#     prl_df.loc[i, 'subid'] = subid\n",
+    "\n",
+    "# prl_df.set_index('subid', inplace=True)\n",
+    "# prl_df.to_csv(\"/home/srs-9/Projects/prl_project/data/PRL_labels.csv\")"
    ]
   },
   {
